[project]
name = "yt-dlp-cli"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "yt-dlp>=2026.6.9",
]

[project.scripts]
yt-dlp-cli = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
